--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ description = "A stream storage implementations."
 async-trait = "0.1"
 bitflags = "1.3.2"
 futures = "0.3"
+libc = "0.2"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.13", features = ["full"] }
