--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,15 @@ description = "A stream storage implementations."
 [dependencies]
 async-trait = "0.1"
 bitflags = "1.3.2"
+derivative = "2.2.0"
 futures = "0.3"
+lazy_static = "1.4"
 libc = "0.2"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.13", features = ["full"] }
 tokio-stream = { version = "0.1", features = ["net"] }
 tonic = "0.6"
-derivative = "2.2.0"
 
 [dev-dependencies]
 tempfile = "3"
