--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ derivative = "2.2.0"
 futures = "0.3"
 lazy_static = "1.4"
 libc = "0.2"
+log = "0.4.14"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.13", features = ["full"] }
@@ -21,6 +22,7 @@ tonic = "0.6"
 
 [dev-dependencies]
 tempfile = "3"
+pretty_env_logger = "0.4.0"
 
 [build-dependencies]
 tonic-build = "0.6"
