--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tokio-stream = { version = "0.1", features = ["net"] }
 tonic = "0.6"
 
 [dev-dependencies]
+ctor = "0.1.21"
 pretty_env_logger = "0.4.0"
 tempfile = "3"
 
