--- a/src/stream-engine/master/Cargo.toml
+++ b/src/stream-engine/master/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 stream-engine-proto = { version = "0.1", path = "../proto" }
 
+log = "0.4.14"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.15", features = ["full"] }
