--- a/src/stream-engine/proto/Cargo.toml
+++ b/src/stream-engine/proto/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 publish = false
 
 [dependencies]
+stream-engine-common = { version = "0.1", path = "../common" }
+
 prost = "0.9"
 tonic = "0.6"
 
