stream-engine: add master client (#477)

--- a/src/stream-engine/client/Cargo.toml
+++ b/src/stream-engine/client/Cargo.toml
@@ -15,4 +15,6 @@ tokio = { version = "1.15", features = ["full"] }
 tonic = "0.6"
 
 [dev-dependencies]
+stream-engine-master = { version = "0.1", path = "../master" }
+
 anyhow = "1.0"
