stream-engine: add store client (#478)

--- a/src/stream-engine/client/Cargo.toml
+++ b/src/stream-engine/client/Cargo.toml
@@ -16,5 +16,6 @@ tonic = "0.6"
 
 [dev-dependencies]
 stream-engine-master = { version = "0.1", path = "../master" }
+stream-engine-store = { version = "0.1", path = "../store" }
 
 anyhow = "1.0"
