--- a/src/stream-engine/store/Cargo.toml
+++ b/src/stream-engine/store/Cargo.toml
@@ -13,4 +13,5 @@ log = "0.4.14"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.15", features = ["full"] }
+tokio-stream = { version = "0.1", features = ["net"] }
 tonic = "0.6"
