--- a/src/stream-engine/client/Cargo.toml
+++ b/src/stream-engine/client/Cargo.toml
@@ -10,6 +10,7 @@ stream-engine-proto = { version = "0.1", path = "../proto" }
 
 derivative = "2.2.0"
 futures = "0.3"
+libc = "0.2"
 log = "0.4.14"
 prost = "0.9"
 thiserror = "1.0"
