stream-engine-master: support list tenants (#570)
Signed-off-by: tison <wander4096@gmail.com>

--- a/src/stream-engine/master/Cargo.toml
+++ b/src/stream-engine/master/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 stream-engine-common = { version = "0.1", path = "../common" }
 stream-engine-proto = { version = "0.1", path = "../proto" }
 
+futures = "0.3.21"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.15", features = ["full"] }
