--- a/src/stream-engine/store/Cargo.toml
+++ b/src/stream-engine/store/Cargo.toml
@@ -8,7 +8,9 @@ publish = false
 stream-engine-common = { version = "0.1", path = "../common" }
 stream-engine-proto = { version = "0.1", path = "../proto" }
 
+crc32fast = "1.3.2"
 futures = "0.3.21"
+libc = "0.2"
 prost = "0.9"
 thiserror = "1.0"
 tokio = { version = "1.15", features = ["full"] }
@@ -18,4 +20,6 @@ tracing = "0.1.31"
 
 [dev-dependencies]
 clap = { version = "3.0.14", features = ["derive"] }
+rand = "0.8"
+tempfile = "3.3"
 tracing-subscriber = "0.3.9"
