--- a/src/stream-engine/client/Cargo.toml
+++ b/src/stream-engine/client/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 stream-engine-common = { version = "0.1", path = "../common" }
 stream-engine-proto = { version = "0.1", path = "../proto" }
+components-metrics = { version = "0.1", path = "../../components/metrics" }
 
 derivative = "2.2.0"
 futures = "0.3"
