--- a/src/stream-engine/master/Cargo.toml
+++ b/src/stream-engine/master/Cargo.toml
@@ -7,6 +7,7 @@ publish = false
 [dependencies]
 stream-engine-common = { version = "0.1", path = "../common" }
 stream-engine-proto = { version = "0.1", path = "../proto" }
+components-metrics = { version = "0.1", path = "../../components/metrics" }
 
 futures = "0.3.21"
 prost = "0.9"
