--- a/src/store/Cargo.toml
+++ b/src/store/Cargo.toml
@@ -24,3 +24,6 @@ tracing = "0.1.31"
 clap = { version = "3.0.14", features = ["derive"] }
 rand = "0.8"
 tracing-subscriber = "0.3.9"
+
+[profile.dev]
+panic = 'abort'
